2022-01-28 - Fixed Header and Main, but still not responsive - Update 006

--- a/css/anchor.css
+++ b/css/anchor.css
@@ -10,7 +10,3 @@ a:hover {
   background-color: rgba(128, 128, 128, 0.5);
   transform: scale(2);
 }
-
-a img {
-    
-}
